--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-basscss-cp
-  Copies all the compiled CSS files from basscss modules into a directory of your choice. The legacy addons are ignored.
+📃BASSCSS CP
+  Copies all the compiled CSS files from basscss modules into a directory of your choice. 
+  The legacy addons are ignored.
 
 Usage
   npm install basscss basscss-basic basscss-addons
